# frankentui

./: .gitignore  .ubsignore  ACCESSIBILITY.md  AGENTS.md  CHANGELOG.md  Cargo.toml  FIXES_SUMMARY.md  Makefile  README.md  REVIEW_REPORT.md  REVIEW_REPORT_FINAL.md  SESSION_TODO.md  UPGRADE_LOG.md  build-wasm.sh  claude-upgrade-progress.json  codex.mcp.json  demo.yaml  frankentui_showcase_demo.html  gemini.mcp.json  perf.data  slo.yaml
crates/ftui-a11y/: Cargo.toml
crates/ftui-a11y/src/: lib.rs  node.rs  tree.rs
crates/ftui-a11y/tests/: a11y_tests.rs
crates/ftui-harness/: Cargo.toml
crates/ftui-harness/examples/: minimal.rs
crates/ftui-harness/src/: artifact_manifest.rs  asciicast.rs  baseline_capture.rs  benchmark_gate.rs  cost_surface.rs  doctor_cost_profile.rs  doctor_topology.rs  failure_signatures.rs  fixture_runner.rs  fixture_suite.rs  flicker_detection.rs  golden.rs  hotspot_extraction.rs  lab_integration.rs  layout_reuse.rs  lib.rs  main.rs  optimization_policy.rs  presenter_equivalence.rs  proof_oracle.rs  proptest_support.rs  render_certificate.rs  render_gauntlet.rs  rollout_runbook.rs  rollout_scorecard.rs  shadow_run.rs  terminal_model.rs  time_travel.rs  validation_matrix.rs
crates/ftui-harness/tests/: conformance_matrix_e2e.rs  demo_execution_e2e.rs  doctor_cost_profile_e2e.rs  e2e_conformance_suite.rs  e2e_flicker_free_round_trip.rs  e2e_galaxy_brain_scenario.rs  editor_perf.rs  editor_snapshots.rs  fixture_runner_e2e.rs  golden_frame_e2e.rs  isomorphism_proofs.rs  proptest_terminal_model_invariants.rs  pty_terminal_lifecycle.rs  regression_detection_accuracy.rs  resize_storm_e2e.rs  shadow_ratatui_e2e.rs  slo_schema_breach_detection.rs  validation_pipeline_e2e.rs  widget_snapshots.rs
crates/ftui-harness/tests/snapshots/: inspector_hit_regions_with_panel.ansi.snap  modal_backdrop_opacity.snap  palette_empty.snap  palette_long_list.snap  palette_no_results.snap  palette_results.snap  panel_ascii.snap  panel_rounded_subtitle.snap  panel_square.snap  panel_title_ellipsis.snap  table_fit_content_wide_glyphs.snap  table_layout_padding_row_height.snap  table_theme_aurora_header_zebra_phase_0_00.ansi.snap  table_theme_aurora_pulse_phase_0_25.ansi.snap  table_theme_graphite_selected_hover_phase_0_00.ansi.snap
crates/ftui-layout/: Cargo.toml
crates/ftui-layout/benches/: layout_bench.rs  pane_profile_harness.rs
crates/ftui-layout/src/: breakpoint.rs  cache.rs  debug.rs  dep_graph.rs  egraph.rs  grid.rs  incremental.rs  lib.rs  pane.rs  repro_grid_overflow.rs  repro_space_around.rs  responsive_layout.rs  veb_tree.rs  workspace.rs
crates/ftui-layout/tests/: e2e_incremental.rs  golden_incremental.rs  overflow_bug.rs  pane_checkpoint_integration.rs  proptest_veb_tree_invariants.rs
crates/ftui-render/: Cargo.toml
crates/ftui-render/benches/: diff_bench.rs  resize_storm_bench.rs  roaring_bench.rs
crates/ftui-render/src/: alloc_budget.rs  ansi.rs  arena.rs  budget.rs  buffer.rs  cell.rs  diff.rs  diff_strategy.rs  drawing.rs  frame.rs  frame_guardrails.rs  grapheme_pool.rs  lib.rs  link_registry.rs  presenter.rs  quotient_filter.rs  render_context.rs  spatial_hit_index.rs  terminal_model.rs
crates/ftui-render/tests/: arena_e2e.rs  e2e_roaring_dirty_tracking.rs  mpc_vs_pi_evaluation.rs  roaring_dirty_e2e.rs
crates/ftui-runtime/: Cargo.toml
crates/ftui-runtime/benches/: pane_terminal_bench.rs
crates/ftui-runtime/src/: allocation_budget.rs  alpha_investing.rs  asciicast.rs  bocpd.rs  conformal_alert.rs  conformal_frame_guard.rs  conformal_stages.rs  cost_model.rs  countmin_sketch.rs  degradation_cascade.rs  demo.rs  diff_evidence.rs  effect_system.rs  eprocess_throttle.rs  evidence_bridges.rs  evidence_sink.rs  flake_detector.rs  flat_combine.rs  input_fairness.rs  input_macro.rs  lens.rs  lib.rs  locale.rs  log_sink.rs  metrics_registry.rs  policy_config.rs  policy_registry.rs  process_subscription.rs  program.rs  queueing_scheduler.rs  render_thread.rs  resize_coalescer.rs  resize_sla.rs  retry.rs  reversible.rs  rough_path.rs  schema_compat.rs  simulator.rs  slo.rs  sos_barrier.rs  (+12 more)
crates/ftui-runtime/src/reactive/: batch.rs  (+3 more)
crates/ftui-runtime/tests/: ci_artifact_contract.rs  demo_yaml_validation.rs  e2e_recipe_b_tail_safe.rs  e2e_recipe_f_policy_as_data.rs  e2e_sos_barrier.rs  effect_executor_parity.rs  go_nogo_scorecard.rs  inline_reflow_policy.rs  lab_runtime_harness.rs  lifecycle_contract.rs  mpc_vs_pi_evaluation.proptest-regressions  mpc_vs_pi_evaluation.rs  policy_controller_tests.rs  policy_e2e.rs  proptest_ivm_invariants.rs  reactive_bindings_e2e.rs  recipe_b_tail_safe_controller.rs  resize_migration_compat.rs  rollout_drills.rs  schema_compat_matrix.rs  shadow_run_comparator.rs  slo_yaml_validation.rs  sos_barrier_integration.rs  state_persistence_e2e.rs  traceability_matrix.rs
crates/ftui-showcase-wasm/: Cargo.toml  frankentui_showcase_demo.html
crates/ftui-showcase-wasm/src/: lib.rs  runner_core.rs  wasm.rs
crates/ftui-simd/: Cargo.toml
crates/ftui-widgets/: Cargo.toml
crates/ftui-widgets/benches/: succinct_bench.rs  widget_bench.rs
crates/ftui-widgets/src/: adaptive_radix.rs  align.rs  badge.rs  block.rs  borders.rs  cached.rs  choreography.rs  columns.rs  constraint_overlay.rs  debug_overlay.rs  decision_card.rs  diagnostics.rs  drag.rs  drift_visualization.rs  elias_fano.rs  emoji.rs  error_boundary.rs  file_picker.rs  height_predictor.rs  help.rs  help_index.rs  help_registry.rs  hint_ranker.rs  history_panel.rs  input.rs  inspector.rs  json_view.rs  keyboard_drag.rs  layout.rs  layout_debugger.rs  lib.rs  list.rs  log_viewer.rs  louds.rs  measure_cache.rs  notification_queue.rs  padding.rs  paginator.rs  panel.rs  paragraph.rs  (+20 more)
crates/ftui-widgets/tests/: decision_card_standalone.rs  drift_visualization_standalone.rs  focus_integration.rs  frame_integration.rs  list_scroll_regression.rs  proptest_succinct_invariants.rs  renderable_snapshots.rs  succinct_e2e.rs  textarea_edge_cases.rs  textarea_wrap_regression.rs  tracing_tests.rs  viewport_fill_regression.rs  virtualized_list_regression.rs  widget_gallery_e2e.rs
(+758 files in other folders)
