[package]
name = "ftui-a11y"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Accessibility layer for FrankenTUI"
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-a11y"
readme = "../../README.md"
keywords = ["tui", "terminal", "ui", "accessibility", "a11y"]
categories = ["command-line-interface", "gui", "accessibility"]

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.2.1" }
ahash = "0.8"

[dev-dependencies]
