[package]
name = "ftui-harness"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
pty-capture = ["dep:portable-pty", "ftui-extras/pty-capture"]

[dependencies]
ftui-render = { path = "../ftui-render" }
ftui-core = { path = "../ftui-core" }
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text", features = ["markup"] }
ftui-layout = { path = "../ftui-layout" }
ftui-extras = { path = "../ftui-extras", features = ["theme"] }
portable-pty = { version = "0.8.1", optional = true }
crossterm = "0.29.0"

[dev-dependencies]
