[package]
name = "ftui-render"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bitflags = "2.10.0"
# Note: ftui-render is the core kernel and should not depend on ftui-style.
# ftui-style depends on ftui-render (not vice versa).
# ftui-layout = { path = "../ftui-layout" }  # TODO: Add when needed
# ftui-text = { path = "../ftui-text" }      # TODO: Add when needed

[dev-dependencies]
proptest = "1"
