[package]
name = "ftui-showcase-wasm"
version = "0.3.1"
edition = "2024"
publish = false
license-file = "../../LICENSE"
description = "WASM showcase runner for FrankenTUI demo app."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ftui-web = { path = "../ftui-web", version = "0.3.1", features = ["input-parser"] }
ftui-demo-showcase = { path = "../ftui-demo-showcase", version = "0.3.1", default-features = false }
ftui-layout = { path = "../ftui-layout", version = "0.3.1" }
serde_json = "1.0.145"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4.1", features = ["wasm_js"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[package.metadata.wasm-pack.profile.release]
# Keep size optimization but avoid long-running converge passes.
wasm-opt = ["-Oz"]
